chore: font size change

--- a/index.html
+++ b/index.html
@@ -5,11 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#FAFAFA" />
     <title>ArkligCSS</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
 
   <body>
     <header>
       <h1>ArkligCSS Elements</h1>
+      <p>
+        Classless light-weight CSS Framework. Only ≈4.3kb <br />
+        <a href="https://www.github.com/dogukanurker/arkligcss">Install</a>
+      </p>
       <label>Theme:</label>
       <select id="theme">
         <option value="auto">Auto</option>
