chore: change install link

--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
       <h1>ArkligCSS Elements</h1>
       <p>
         Classless light-weight CSS Framework. Only ≈4.3kb <br />
-        <a href="https://www.github.com/dogukanurker/arkligcss">Install</a>
+        <a
+          href="https://github.com/dogukanurker/arkligcss?tab=readme-ov-file#cdn"
+          target="_blank"
+          >👉🏻 Click for CDN</a
+        >
       </p>
       <label>Theme:</label>
       <select id="theme">
