chore: small changes

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <body>
     <header>
-      <h1>ArkligCSS Elements</h1>
+      <h1><mark>ArkligCSS</mark> Elements</h1>
       <p>
         Classless light-weight CSS Framework. Only ≈4.3kb <br />
         <a
@@ -38,7 +38,6 @@
         <option value="Green">Green</option>
         <option value="Indigo">Indigo</option>
         <option value="Lime">Lime</option>
-        <option value="Rose">Rose</option>
         <option value="Neutral">Neutral</option>
         <option value="Orange">Orange</option>
         <option value="Pink">Pink</option>
@@ -225,7 +224,6 @@
         <br />
         <progress value="70" max="100">70%</progress>
         <br />
-        <meter value="0.7">70%</meter>
       </section>
 
       <section id="misc-elements">
