--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
           <input type="range" /><br /><br />
 
           <label>File Input:</label>
-          <input type="file" /><br /><br />
+          <input type="file" id="file" /><br /><br />
 
           <button type="submit">Submit</button>
           <button type="reset">Reset</button>
